apps/jellfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 7359
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
            - containerPort: 8096
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "2Gi"
              intel.com/gpu: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: data
          persistentVolumeClaim:
            claimName: media
